# GenAiProject-MirrorMind

./: README.md  adaptive_health_tips.py  animated_logo.py  app.py  bilingual_messages.py  daily_quotes.py  emotion_detector.py  emotion_journal.db  emotion_journal.py  health_tips.py  mood_data.json  mood_tracker.py  pyproject.toml  voice_handler.py
attached_assets/: Pasted--Emotion-Aware-Smart-Mirror-for-Mental-Health-Monitoring-Concept-An-AI-powered-smart-mirror-that-1756752071446_1756752071446.txt
models/: emotion_model.py
